# lab10_meme_generator

./: CMakeLists.txt  memeify.cpp  memer.cpp  memer.h  readme.txt
